--- a/IPM-SpringBoot/src/main/resources/application.properties
+++ b/IPM-SpringBoot/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8085
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/insurance
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=Kalyan@28042001
 
 
 #Hibernate Configration
